--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "php": ">=5.6.4",
         "acacha/admin-lte-template-laravel": "4.*",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "intervention/image":"^2.4",
+        "laravelcollective/html":"^5.4.0",
+        "nesbot/carbon": "~1.18",
+        "laravellegends/pt-br-validator" : "5.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
