--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "intervention/image":"^2.4",
         "laravelcollective/html":"^5.4.0",
         "nesbot/carbon": "~1.18",
-        "laravellegends/pt-br-validator" : "5.1.*"
+        "laravellegends/pt-br-validator" : "5.1.*",
+        "doctrine/dbal" : "2.6.*",
+//        "guzzlehttp/guzzle": "6.*"
 
     },
     "require-dev": {
