Falta enviar email

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "laravelcollective/html":"^5.4.0",
         "nesbot/carbon": "~1.18",
         "laravellegends/pt-br-validator" : "5.1.*",
-        "doctrine/dbal" : "2.6.*",
-//        "guzzlehttp/guzzle": "6.*"
+        "doctrine/dbal" : "2.6.*"
+
 
     },
     "require-dev": {
