--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,15 @@
     "require": {
         "php": ">=7.0.0",
         "acacha/admin-lte-template-laravel": "5.*",
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "doctrine/dbal": "2.6.*",
         "fideloper/proxy": "~3.3",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "intervention/image":"^2.4",
-        "laravelcollective/html":"^5.4.0",
-        "nesbot/carbon": "~1.18",
-        "laravellegends/pt-br-validator" : "5.1.*",
-        "doctrine/dbal" : "2.6.*"
-
-
+        "laravelcollective/html": "^5.4.0",
+        "laravellegends/pt-br-validator": "5.1.*",
+        "nesbot/carbon": "~1.18"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
